<resources>
    <string name="app_name">E-Report</string>

    <string name="id_card">เลขบัตรประชาชน</string>
    <string name="select_back">เลือกธนาคาร</string>
    <string name="assure">ยืนยันตัวตน</string>
    <string name="iden">Identifying Process</string>
    <string name="email">อีเมล์</string>
    <string name="pin">สร้างรหัส PIN</string>
    <string name="pin_confirm">ยืนยันรหัส PIN</string>
    <string name="next">ต่อไป</string>
    <string name="name">ชื่อ</string>
    <string name="surname">นามสกุล</string>
    <string name="tel">เบอร์โทรศัพท์</string>
    <string name="address">ที่อยู่สำหรับส่งเอกสาร</string>
    <string name="district">ตำบล</string>
    <string name="amphoe">อำเภอ</string>
    <string name="province">จังหวัด</string>
    <string name="postcode">รหัสไปรษณีย์</string>
    <string name="create_user">สร้างบัญชีผู้ใช้</string>
    <string name="login">เข้าสู่ระบบ</string>
</resources>
